--- a/index.html
+++ b/index.html
@@ -81,5 +81,11 @@
             
         </div>
     </div>
+
+    <!-- creator and frontmentor link section -->
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Dilan M Jayawardana</a>.
+      </div>
 </body>
 </html>
